// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Modal View should call close modal function 1`] = `
<Styled(Modal)
  className="TCPModal__Content, undefined"
  fixedWidth={true}
  heading="DELETE ADDRESS"
  isOpen={true}
  maxWidth="460px"
  minHeight="500px"
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
>
  <Styled(DeleteAddressModal)
    closeModalComponent={[MockFunction]}
    data={
      Object {
        "buttons": Object {
          "cancel": "No, Dont Cancel",
          "confirm": "Yes Delete",
        },
        "description": "hi",
        "heading": "DELETE ADDRESS",
        "title": "Are you sure you want to delete this address?",
      }
    }
  />
</Styled(Modal)>
`;

exports[`Account Modal View should not render AccountModal Correctly 1`] = `""`;

exports[`Account Modal View should render AccountModalView Correctly 1`] = `
<Styled(Modal)
  className="TCPModal__Content, undefined"
  fixedWidth={true}
  heading="DELETE ADDRESS"
  isOpen={true}
  maxWidth="460px"
  minHeight="500px"
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
>
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": "No, Dont Cancel",
          "confirm": "Yes Delete",
        },
        "description": "hi",
        "heading": "DELETE ADDRESS",
        "title": "Are you sure you want to delete this address?",
      }
    }
  />
</Styled(Modal)>
`;

exports[`Account Modal View should render AccountModalView Correctly but delete address should not get mounted 1`] = `
<Styled(Modal)
  className="TCPModal__Content, undefined"
  fixedWidth={true}
  heading="DELETE ADDRESS"
  isOpen={true}
  maxWidth="460px"
  minHeight="500px"
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
>
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": "No, Dont Cancel",
          "confirm": "Yes Delete",
        },
        "description": "hi",
        "heading": "DELETE ADDRESS",
        "title": "Are you sure you want to delete this address?",
      }
    }
  />
</Styled(Modal)>
`;

exports[`Account Modal View should render Notification with error 1`] = `
<Styled(Modal)
  className="TCPModal__Content, undefined"
  fixedWidth={true}
  heading="DELETE ADDRESS"
  isOpen={true}
  maxWidth="460px"
  minHeight="500px"
  onRequestClose={[Function]}
  overlayClassName="TCPModal__Overlay"
>
  <Styled(Notification)
    colSize={
      Object {
        "large": 11,
        "medium": 7,
        "small": 6,
      }
    }
    message="error"
    status="error"
  />
  <Styled(DeleteAddressModal)
    data={
      Object {
        "buttons": Object {
          "cancel": "No, Dont Cancel",
          "confirm": "Yes Delete",
        },
        "description": "hi",
        "heading": "DELETE ADDRESS",
        "title": "Are you sure you want to delete this address?",
      }
    }
  />
</Styled(Modal)>
`;
